--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+.flutter-plugins-dependencies
+.dart_tool/package_config.json
