IN-27 dummydata and notification on cart icon
resolve conflicts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.1.1
+  http: ^0.13.5
+  carousel_slider: ^4.1.1
+  badges: ^2.0.3
 
 
 
